--- a/index.html
+++ b/index.html
@@ -10,5 +10,28 @@
     <h1> Lakshmi Mupparaju</h1>
     <h6>Louvre Museum</h6>
     <p>A tour through the Louvre Museum's extensive galleries provides a crash course in Western Civilization's finest art.Some of the world's most famous masterpieces are on display here, including the <strong> Mona Lisa </strong>by Leonardo da Vinci, <Strong> Les Noces de Cana </Strong>by Véronèse, The Winged Victory of Samothrace,Psyche Revived by Cupid’s Kiss, The Raft of the Medusa and much more.A tour through the Louvre Museum's extensive galleries provides a crash course in Western Civilization's finest art.Some of the world's most famous masterpieces are on display here, including the Mona Lisa by Leonardo da Vinci,Les Noces de Cana by Véronèse, The Winged Victory of Samothrace,Psyche Revived by Cupid’s Kiss, The Raft of the Medusa and much more</p>
+<hr>
+<h3>Ordered list</h3>
+<p>The nearest airport to The Louvre is Paris Orly (ORY) Airport. Once you are out of airport take the following steps:</p>
+<ol>
+    <li>Go straight and take left to get to Rungis</li>
+    <li>Keep straight and travel 2miles to castroma  </li>
+    <li>from Castroma take right to head villejuif</li>
+    <li>Take right at villejuif and head towards hopital bicetre</li>
+    <li>You will get to valdemarne junction at then end of hopital bicetre road</li>
+    <li>From Junction take left and travel 3miles</li>
+    <li>At jardin des Plantes take left and head straight</li>
+    <li>Make a U-Turn at Musee Rodin </li>
+    <li>Travel 0.5 mile from Musee Rodin and you see the destination(Lourve Museum) to left.</li>
+</ol>
+<h3>Nearby Visiting Location from Lourve Museum</h3>
+<ul>
+    <li>Eiffel Tower</li>
+    <li>Cathédrale Notre-Dame De Paris</li>
+    <li>Musée D'Orsay</li>
+    <li>Musée De L'Orangerie</li>
+    <li>Palais Garnier</li>
+    <li>Place De La Concorde</li>
+</ul>
 </body>
 </html>
