--- a/index.html
+++ b/index.html
@@ -33,5 +33,6 @@
     <li>Palais Garnier</li>
     <li>Place De La Concorde</li>
 </ul>
+<a href="file:///C:/Users/S554962/Documents/webapps-repos/44563-webapps-assignment-3-lakshmi2810/Aboutme.html">link to Aboutme</a>
 </body>
 </html>
