--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Creating a basic HTML structure</title>
+    <title>Creating a basic HTML structure</title>\
+    <style>
+        table, th, td {
+          border:1px solid black;
+        }
+        </style>
 </head>
 <body>
     <h1> Lakshmi Mupparaju</h1>
@@ -34,5 +39,38 @@
     <li>Place De La Concorde</li>
 </ul>
 <a href="file:///C:/Users/S554962/Documents/webapps-repos/44563-webapps-assignment-3-lakshmi2810/Aboutme.html">link to Aboutme</a>
+<hr>
+<h3> Places to Visit</h3>
+<p>Sometimes all we need is a break from all the hustle days we have and escape to great cities for refreshment. The below are the best cities to go for trips:</p>
+<table style="width:100%">
+    <tr>
+      <th>City name </th>
+      <th>Location </th>
+      <th>Time spent </th>
+    </tr>
+    <tr>
+        <td>Paris </td>
+        <td>Eiffel Tower </td>
+        <td>25M </td>
+    </tr>
+    <tr>
+        <td>Vanves  </td>
+        <td>Palace of Verasailes </td>
+        <td>30M </td>
+    </tr>
+    <tr>
+        <td>Gentilly </td>
+        <td>EPont Nuef </td>
+        <td>35M </td>
+    </tr>
+</table>
+<hr>
+<h3>Code Display</h3>
+<blockquote cite="https://stackoverflow.com/questions/58970023/how-to-make-firefox-open-rss-directly-like-other-xml-files-instead-of-downloa">RSS Feed in FireFox</blockquote>
+<a href = "https://css-tricks.com/snippets/html/view-source-of-rss-feed-in-firefox/"></a>
+<pre>
+    view-source:http://today.wisc.edu/events/tag/humanities.rss
+</pre>
+
 </body>
 </html>
