--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Creating a basic HTML structure</title>\
+    <title>Creating a basic HTML structure</title>
     <style>
         table, th, td {
           border:1px solid black;
@@ -67,7 +67,8 @@
 <hr>
 <h3>Code Display</h3>
 <blockquote cite="https://stackoverflow.com/questions/58970023/how-to-make-firefox-open-rss-directly-like-other-xml-files-instead-of-downloa">RSS Feed in FireFox</blockquote>
-<a href = "https://css-tricks.com/snippets/html/view-source-of-rss-feed-in-firefox/"></a>
+<a href = "https://css-tricks.com/snippets/html/view-source-of-rss-feed-in-firefox/"> CSS Trick code snippet <link rel="alternate" href="rss.xml" type="application/rss+xml" title="RSS"></a><br>
+<br><a href = "https://stackoverflow.com/questions/58970023/how-to-make-firefox-open-rss-directly-like-other-xml-files-instead-of-downloa"> Stackoverflow Link</a>
 <pre>
     view-source:http://today.wisc.edu/events/tag/humanities.rss
 </pre>
