updated index and given code for bonus

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <title>Creating a basic HTML structure</title>
     <style>
         table, th, td {
-          border:1px solid black;
+          border:1px solid grey;
         }
         </style>
 </head>
 <body>
+    <a href="bonus.html">BONUS</a>
     <h1> Lakshmi Mupparaju</h1>
     <h6>Louvre Museum</h6>
     <p>A tour through the Louvre Museum's extensive galleries provides a crash course in Western Civilization's finest art.Some of the world's most famous masterpieces are on display here, including the <strong> Mona Lisa </strong>by Leonardo da Vinci, <Strong> Les Noces de Cana </Strong>by Véronèse, The Winged Victory of Samothrace,Psyche Revived by Cupid’s Kiss, The Raft of the Medusa and much more.A tour through the Louvre Museum's extensive galleries provides a crash course in Western Civilization's finest art.Some of the world's most famous masterpieces are on display here, including the Mona Lisa by Leonardo da Vinci,Les Noces de Cana by Véronèse, The Winged Victory of Samothrace,Psyche Revived by Cupid’s Kiss, The Raft of the Medusa and much more</p>
@@ -38,7 +39,7 @@
     <li>Palais Garnier</li>
     <li>Place De La Concorde</li>
 </ul>
-<a href="file:///C:/Users/S554962/Documents/webapps-repos/44563-webapps-assignment-3-lakshmi2810/Aboutme.html">link to Aboutme</a>
+<a href="Aboutme.html">link to Aboutme</a>
 <hr>
 <h3> Places to Visit</h3>
 <p>Sometimes all we need is a break from all the hustle days we have and escape to great cities for refreshment. The below are the best cities to go for trips:</p>
