--- a/bonus.html
+++ b/bonus.html
@@ -15,7 +15,8 @@
         <li>A welcome return to a human mascot following the horrors of Vike.</li>
         <li>Magnus is a man of few words, instead relying on his piercing stare and permanent smile to intimidate students and rivals alike.</li>
     </ol>
-    <img src="magnus.jpg" alt="Mascot Image" width="200" height="300">
-
+    <img src="magnus.jpg" alt="Mascot Image" width="200" height="300"><br>
+<br>
+<a href="index.html">Index Page</a>
 </body>
 </html>
