updated text of links

--- a/bonus.html
+++ b/bonus.html
@@ -17,6 +17,6 @@
     </ol>
     <img src="magnus.jpg" alt="Mascot Image" width="200" height="300"><br>
 <br>
-<a href="index.html">Index Page</a>
+<a href="index.html">Click here to go Index Page</a>
 </body>
 </html>
