--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <li>Palais Garnier</li>
     <li>Place De La Concorde</li>
 </ul>
-<a href="Aboutme.html">link to Aboutme</a>
+<a href="Aboutme.html">Click here to go Aboutme</a>
 <hr>
 <h3> Places to Visit</h3>
 <p>Sometimes all we need is a break from all the hustle days we have and escape to great cities for refreshment. The below are the best cities to go for trips:</p>
